--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,17 +11,26 @@
 <body class="container">
     <header class="header">
         <h1>
-            Segunda Preentrega - coder house
+            ¡Proyecto Final de Coder House!
         </h1>
         <h2> Se trata de un programa para solicitar leciencias </h2>
         <main class="main__propio">
             <h3>Registro de Usuario</h3>
-            <form id="formularioRegistro">
+            <form action="" id="iniciarSesion-crearCuenta">
+            <label for="inciarSesion"></label>
+            <input type="button" value="Iniciar Sesión" onclick="iniciarSesion()">
+            </form>
+            <label for="CrearCuenta"></label>
+            <input type="button" value="Crear Cuenta" onclick="crearCuenta()" id="crearCuenta">
+            
+            <form id="formularioRegistro" class="formularioCrearCuenta">
                 <label for="nuevoUsuario">Nuevo Usuario:</label>
                 <input type="text" id="nuevoUsuario" placeholder="solo letras" required>
                 <label for="crearContraseña">Crear Contraseña:</label>
                 <input type="password" id="crearContraseña" placeholder="Ingrese su contraseña" required>
-                <input type="submit" value="Aceptar y Enviar" id="btnAceptaryEnviar"class="btn btn-secondary">
+                <label for="repetirContraseña">Repetir Contraseña:</label>
+                <input type="password" id="repetirContraseña" placeholder="repetir contraseña" required>
+                <input type="submit" value="Aceptar y Enviar" id="btnAceptaryEnviar" class="btn btn-secondary" onclick="btnAceptaryEnviar()" >
                 <input type="reset" value="Cancelar" id="btnCancelar" class="btn btn-dark">
             </form>
         </main>
@@ -34,7 +42,7 @@
        <p>programador Andrada Lucas</p>
         </footer>
         <script src="./js/logica.js"></script>
+        <script src="./js/logica-01.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
-
 </html>
