--- a/pages/page-02.html
+++ b/pages/page-02.html
@@ -10,14 +10,14 @@
     <p><a href="../index.html">Volver al Inicio</a></p>
   </div>
     <div>
-        <label for="usuario"></label>
+        <label for="inputUsuarioInicioSesion"></label>
         <input type="text" name="usuario" placeholder="ingrese su usuario" id="inputUsuarioInicioSesion">
-        <label for="contraseña"></label>
+        <label for="inputContraseñaInicioSesion"></label>
         <input type="password" name="contraseña" placeholder="ingrese su contraseña" id="inputContraseñaInicioSesion">
-        <button type="submit" id="btnIngresarSesion" onclick="inciarSesion()">Ingresar</button>
+        <button type="submit" id="btnIngresarSesion">Ingresar</button>
         <button type="reset">Cancelar</button>
     </div>
 
-<script src="../js/logica-page02.js"></script>
+<script src="../js/logica.js"></script>
 </body>
 </html>
