--- a/pages/page-03.html
+++ b/pages/page-03.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>aqui debe estar la info del usuario logeado</p>
+    <script src="../js/logica.js"></script>
 </body>
 </html>
