--- a/pages/page-1.html
+++ b/pages/page-1.html
@@ -11,56 +11,56 @@
 
 <body class="container">
     <header class="header">
-        <h1 class="text-center">bienvenido</h1>
+        <h1 class="text-center" id="mensajeBienvenida"></h1>
     </header>
     <form action="" id="formDatos" class="formulario">
-        <label for="nombre">Nombre:</label>
+        <label for="inputNombre">Nombre:</label>
         <input type="text" id="inputNombre" placeholder="Ingresa tu nombre" required>
 
-        <label for="apellido">Apellido:</label>
+        <label for="inputApellido">Apellido:</label>
         <input type="text" id="inputApellido" placeholder="Ingresa tu Apellido" required>
 
-        <label for="dni">Dni:</label>
+        <label for="inputDni">Dni:</label>
         <input type="number" id="inputDni" placeholder="Dni" required>
 
 
-        <label for="nacimiento">Nacimiento:</label>
+        <label for="inputNacimiento">Nacimiento:</label>
         <input type="date" id="inputNacimiento" placeholder="Fecha de Nacimiento" required>
 
-        <label for="edad">Edad:</label>
+        <label for="inputEdad">Edad:</label>
         <input type="number" id="inputEdad" placeholder="Ingresa tu Edad" required>
 
-        <label for="pais">Pais</label>
+        <label for="inputPais">Pais</label>
         <input type="text" id="inputPais" placeholder="Nacionalidad" required>
 
-        <label for="provincia">Provincia</label>
+        <label for="inputProvincia">Provincia</label>
         <input type="text" id="inputProvincia" placeholder="Provincia" required>
 
-        <label for="ciudad">ciudad</label>
+        <label for="inputCiudad">ciudad</label>
         <input type="text" id="inputCiudad" placeholder="Localidad" required>
 
-        <label for="direccion">Direccion:</label>
+        <label for="inputDireccion">Direccion:</label>
         <input type="text" id="inputDireccion" placeholder="Direccion exacta" required>
 
-        <label for="mail">Mail:</label>
+        <label for="inputMail">Mail:</label>
         <input type="text" id="inputMail" placeholder="Correo Electronico" required>
 
-        <label for="telefono">Telofono:</label>
+        <label for="inputTelefono">Telofono:</label>
         <input type="number" id="inputTelefono" placeholder="Telofono" required>
 
-        <label for="cargo">Cargo:</label>
+        <label for="inputCargo">Cargo:</label>
         <input type="text" id="inputCargo" placeholder="Tu Jerarquia o Cargo" required>
 
-        <label for="numeroCargo">Numero Cargo:</label>
+        <label for="inputNumeroCargo">Numero Cargo:</label>
         <input type="number" id="inputNumeroCargo" placeholder="Ingresa tu numero de cargo" required>
 
-        <label for="InicioLaboral">Inicio Laboral:</label>
+        <label for="inputInicioLaboral">Inicio Laboral:</label>
         <input type="date" id="inputInicioLaboral" placeholder="Fecha de Inicio Laboral" required>
 
-        <label for="obraSocial">Obra Social:</label>
+        <label for="inputObraSocial">Obra Social:</label>
         <input type="text" id="inputObraSocial" placeholder="Cual es tu Obra Social?" required>
 
-        <label for="numeroObraSocial">Numero de Afiliado:</label>
+        <label for="inputNumeroObraSocial">Numero de Afiliado:</label>
         <input type="number" id="inputNumeroObraSocial" placeholder="cual es el numero de Afiliado?" required>
 
 
@@ -148,7 +148,6 @@
     <footer>
 
     </footer>
-    <script src="../js/logica-01.js"></script>
     <script src="../js/logica.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
