--- a/pages/page-1.html
+++ b/pages/page-1.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.min.css">
 </head>
 
 <body class="container">
     <header class="header">
-        <h1 class="text-center" id="mensajeBienvenida"></h1>
+        <h1 class="text-center"></h1>
+        <p id="mostrarMensajeBienvenida" class="mensaje"></p>
     </header>
     <form action="" id="formDatos" class="formulario">
+        
         <label for="inputNombre">Nombre:</label>
         <input type="text" id="inputNombre" placeholder="Ingresa tu nombre" required>
 
@@ -30,14 +33,10 @@
         <label for="inputEdad">Edad:</label>
         <input type="number" id="inputEdad" placeholder="Ingresa tu Edad" required>
 
-        <label for="inputPais">Pais</label>
-        <input type="text" id="inputPais" placeholder="Nacionalidad" required>
+        <input type="text" id="inputPais" placeholder="Ingrese un país" oninput="mostrarProvincias()">
+<select id="inputProvincia"></select>
+<select id="inputCiudad"></select>
 
-        <label for="inputProvincia">Provincia</label>
-        <input type="text" id="inputProvincia" placeholder="Provincia" required>
-
-        <label for="inputCiudad">ciudad</label>
-        <input type="text" id="inputCiudad" placeholder="Localidad" required>
 
         <label for="inputDireccion">Direccion:</label>
         <input type="text" id="inputDireccion" placeholder="Direccion exacta" required>
@@ -68,6 +67,8 @@
         <input type="button" value="Cancelar" id="btnCancelar2" class="btn-dark">
         <input type="button" value="Nueva Consulta" id="btnNuevaConsulta" class="btn-dark">
         <a href="../index.html" class="btn-dark">Volver al Home</a>
+        <div id="resultado" class="resultado"></div>
+
     </form>
     <main class="main__propio">
         <div class=""  id="tablas">
@@ -86,7 +87,7 @@
             <table class="table table-dark table-striped-columns tabla2" id="tabla2">
                 <thead>
                     <tr>
-                        <th>Pais</th>
+                        <th>Pais </th>
                         <th>Provincia</th>
                         <th>Ciudad</th>
                         <th>Direccion</th>
@@ -148,10 +149,11 @@
     <footer>
 
     </footer>
-    <script src="../js/logica.js"></script>
+    <script src="../js/pages-01.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.min.js"></script>
 </body>
 
 </html>
