proyecto final de JavaScript

--- a/pages/page-1.html
+++ b/pages/page-1.html
@@ -12,9 +12,10 @@
 
 <body class="container">
     <header class="header">
-        <h1 class="text-center"></h1>
+        <h1 class="text-center">Carga tus datos</h1>
         <p id="mostrarMensajeBienvenida" class="mensaje"></p>
     </header>
+    <div class="divData">
     <form action="" id="formDatos" class="formulario">
         
         <label for="inputNombre">Nombre:</label>
@@ -70,6 +71,7 @@
         <div id="resultado" class="resultado"></div>
 
     </form>
+    </div>
     <main class="main__propio">
         <div class=""  id="tablas">
             <table id="tabla1" class="table table-dark table-striped-columns tabla1">
