--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Solicitud de Licencias</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.min.css">
 </head>
 
 <body class="container">
@@ -13,28 +14,30 @@
         <h1>
             ¡Proyecto Final de Coder House!
         </h1>
-        <h2> Se trata de un programa para solicitar leciencias </h2>
+        <h2> Se trata de un programa para solicitar licencias</h2>
+
+        <h5>Pronto tendremos la opcion de añadir tu empresa , esta App esta en Constante Desarrollo.</h5>
         <main class="main__propio">
             <h3>Registro de Usuario</h3>
             <form action="" id="botonera">
-            <input type="button" value="Iniciar Sesión" id="btnInciarSesion">
-            <input type="button" value="Crear Cuenta"  id="btnCrearCuenta">
-        </form>
+                <input type="button" value="Iniciar Sesión" id="btnInciarSesion" class="btn btn-dark">
+                <input type="button" value="Crear Cuenta"  id="btnCrearCuenta" class="btn btn-dark">
+            </form>
             
             <form id="formularioRegistro" class="formularios">
-                <input type="text" id="nuevoUsuario" placeholder=" ingrese un usuario" required>
-                <input type="password" id="crearContraseña" placeholder="Ingrese una contraseña" required>
-                <input type="password" id="repetirContraseña" placeholder="repetir contraseña" required>
+                <input type="text" id="nuevoUsuario" placeholder="Ingrese un usuario" required class="form-control">
+                <input type="password" id="crearContraseña" placeholder="Ingrese una contraseña" required class="form-control">
+                <input type="password" id="repetirContraseña" placeholder="Repetir contraseña" required class="form-control">
                 <input type="submit" value="Aceptar y Enviar" id="btnAceptarYEnviar" class="btn btn-secondary">
                 <input type="reset" value="Cancelar" id="btnCancelar" class="btn btn-dark">
             </form>
             <div id="formularioInicioSesion" class="formularios">
                 <label for="inputUsuarioInicioSesion"></label>
-                <input type="text" name="usuario" placeholder="ingrese su usuario" id="inputUsuarioInicioSesion">
+                <input type="text" name="usuario" placeholder="Ingrese su usuario" id="inputUsuarioInicioSesion" class="form-control">
                 <label for="inputContraseñaInicioSesion"></label>
-                <input type="password" name="contraseña" placeholder="ingrese su contraseña" id="inputContraseñaInicioSesion">
-                <button type="submit" id="btnIngresarSesion">Ingresar</button>
-                <button type="reset">Cancelar</button>
+                <input type="password" name="contraseña" placeholder="Ingrese su contraseña" id="inputContraseñaInicioSesion" class="form-control">
+                <button type="submit" id="btnIngresarSesion" class="btn btn-secondary">Ingresar</button>
+                <button type="reset"  id= "btnCancelarIniciarSesion"  class="btn btn-dark">Cancelar</button>
             </div>
         </main>
         <section class="section3">
@@ -43,9 +46,11 @@
         <section class="section4"></section>
         <aside class="publicidad"></aside>
         <footer class="pie__pagina">
-       <p>programador Andrada Lucas</p>
+            <p>Programador Andrada Lucas</p>
         </footer>
-        <script src="./js/index.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    </header>
+    <script src="./js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.min.js"></script>
 </body>
 </html>
